--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,23 +1,23 @@
-{% extends "openid/base.html" %}
+{% extends "account/base_manage_password.html" %}
 {% load i18n %}
 {% load allauth %}
 {% block head_title %}
-    OpenID {% translate "Sign In" %}
+    {% trans "Set Password" %}
 {% endblock head_title %}
 {% block content %}
     {% element h1 %}
-        OpenID {% trans 'Sign In' %}
+        {% trans "Set Password" %}
     {% endelement %}
-    {% url 'openid_login' as action_url %}
+    {% url 'account_set_password' as action_url %}
     {% element form method="post" action=action_url %}
         {% slot body %}
             {% csrf_token %}
-            {% element fields form=form unlabeled=True %}
+            {% element fields form=form %}
             {% endelement %}
         {% endslot %}
         {% slot actions %}
-            {% element button type="submit" %}
-                {% translate "Sign In" %}
+            {% element button type="submit" name="action" %}
+                {% trans 'Set Password' %}
             {% endelement %}
         {% endslot %}
     {% endelement %}
