--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% load i18n %}
 {% load account socialaccount %}
-{% load static %}
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'css/login.css' %}">
@@ -10,13 +10,13 @@
 
 {% block head_title %}{% translate "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block body %}
 
 <div class="main-content pl-sm-3 mt-4" id="main-content">
   <div class="row justify-content-between align-items-center">
     <div class="col-md-7 col-sm-6 ">
       <div class="div-login-background">
-        <img class="img-login-lady" src="{% static 'images/login.png' %}" alt="Imagem de Login" />
+        <img class="img-login-lady" src="{% static 'img/logo.png' %}" alt="Imagem de Login" width="400" height="400"/>
       </div>
     </div>
     <div class="div-system-access col-md-5 col-lg-5 col-xl-5 col-12">
