--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="{% url 'filomenas:home' %}">Home</a></li>
                     <li><a href="#">Pacotes</a></li>
                     <li><a href="#">Filomenas</a></li>
                 </ul>
