--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -16,7 +16,7 @@
   <div class="row justify-content-between align-items-center">
     <div class="col-md-7 col-sm-6 ">
       <div class="div-login-background">
-        <img class="img-login-lady" src="{% static 'img/logo.png' %}" alt="Imagem de Login" width="400" height="400"/>
+        <img class="img-login-lady" src="{% static 'img/fil.jpg' %}" alt="Imagem de Login" width="400" height="400"/>
       </div>
     </div>
     <div class="div-system-access col-md-5 col-lg-5 col-xl-5 col-12">
@@ -30,7 +30,7 @@
               <i class="fas fa-user" aria-hidden="true"></i>
             </div>
             {{ form.login }}
-            <p>{% translate "Digite seu nome de usuário." %}</p>
+            <!-- <p>{% translate "Digite seu nome de usuário." %}</p> -->
           </div>
         </div>
         <div class="br-input input-button">
@@ -43,7 +43,7 @@
             <button class="br-button" type="button" aria-label="Mostrar senha">
               <i class="fas fa-eye" aria-hidden="true"></i>
             </button>
-            <p>{% translate "Digite sua senha de segurança." %}</p>
+            <!-- <p>{% translate "Digite sua senha de segurança." %}</p> -->
           </div>
         </div>
         {% if redirect_field_value %}
