--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'filomenas:home' %}">Home</a></li>
-                    <li><a href="#">Pacotes</a></li>
-                    <li><a href="#">Filomenas</a></li>
+                    <li><a href="{% url 'filomenas:pacote' %}">Pacotes</a></li>
+                    <li><a href="{% url 'filomenas:filomenas' %}">Filomenas</a></li>
                 </ul>
             </nav>
 
