--- a/templates/base2.html
+++ b/templates/base2.html
@@ -24,9 +24,9 @@
 
             <nav>
                 <ul>
-                    <li><a href="{% url 'filomenas:home' %}">Home</a></li>
-                    <li><a href="#">Pacotes</a></li>
-                    <li><a href="#">Filomenas</a></li>
+                    <li><a href="{% url 'filomenas:home2' %}">Home</a></li>
+                    <li><a href="{% url 'filomenas:pacote2' %}">Pacotes</a></li>
+                    <li><a href="{% url 'filomenas:filomenas2' %}">Filomenas</a></li>
                 </ul>
             </nav>
 
