--- a/static/css/a.css
+++ b/static/css/a.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.text-h1{
+    color:#E28743;
+}
+
 html{
     height: 200vh;
 }
@@ -72,7 +76,7 @@ header ul li a{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
-    position: fixed;
+    /* position: fixed; */
     height: 350px;
     bottom: 0;
     width: 100%;
