--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -16,7 +16,7 @@
   <div class="row justify-content-between align-items-center">
     <div class="col-md-7 col-sm-6 ">
       <div class="div-login-background">
-        <img class="img-login-lady" src="{% static 'img/fil.jpg' %}" alt="Imagem de Login" width="400" height="400"/>
+        <img class="img-login-lady" src="{% static 'img/fil.jpg' %}" alt="Imagem de Login" width="400" height="300"/>
       </div>
     </div>
     <div class="div-system-access col-md-5 col-lg-5 col-xl-5 col-12">
@@ -24,7 +24,7 @@
       <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
         <div class="br-input">
-          <label for="id_login">{% translate "Username:" %}</label>
+          <label for="id_login">{% translate "Usuário:" %}</label>
           <div class="input-group">
             <div class="input-icon">
               <i class="fas fa-user" aria-hidden="true"></i>
@@ -59,7 +59,7 @@
             <label for="keep_connected_checkbox">{% translate "Manter-me conectado" %}</label>
           </div>
         </div>
-        <button class="primaryAction br-button primary block" type="submit">{% translate "Sign In" %}</button>
+        <button class="w3-button w3-round-xlarge w3-khaki" type="submit">{% translate "Sign In" %}</button>
       </form>
       <span class="br-divider my-3"></span>
       <p class="first-access-href">
