--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -59,7 +59,7 @@
             <label for="keep_connected_checkbox">{% translate "Manter-me conectado" %}</label>
           </div>
         </div>
-        <button class="w3-button w3-round-xlarge w3-khaki" type="submit">{% translate "Sign In" %}</button>
+        <button class="w3-button w3-round-xlarge  w3-orange" type="submit">{% translate "Sign In" %}</button>
       </form>
       <span class="br-divider my-3"></span>
       <p class="first-access-href">
