--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'filomenas:home' %}">Home</a></li>
-                    <li><a href="{% url 'filomenas:pacote' %}">Pacotes</a></li>
+                    <li><a href="{% url 'filomenas:listar' %}">Pacotes</a></li>
                     <li><a href="{% url 'filomenas:filomenas' %}">Filomenas</a></li>
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
 {% block footer %}
 
 
-<!-- <footer>
+ <footer>
 
     <div class="foot">
         <ul>      
@@ -116,7 +116,7 @@
     </div>
 
 
-</footer> -->
+</footer> 
 
 <!-- <footer>
     <div class="container text-center">
