--- a/templates/base2.html
+++ b/templates/base2.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'filomenas:home2' %}">Home</a></li>
-                    <li><a href="{% url 'filomenas:pacote2' %}">Pacotes</a></li>
+                    <li><a href="{% url 'filomenas:listar' %}">Pacotes</a></li>
                     <li><a href="{% url 'filomenas:filomenas2' %}">Filomenas</a></li>
                 </ul>
             </nav>
