--- a/static/css/a.css
+++ b/static/css/a.css
@@ -76,7 +76,7 @@ header ul li a{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
-    /* position: fixed; */
+     position: fixed; 
     height: 350px;
     bottom: 0;
     width: 100%;
