--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
     
 
 {% block footer %}
-
+<!-- 
 
  <footer>
 
@@ -116,7 +116,7 @@
     </div>
 
 
-</footer> 
+</footer>  -->
 
 <!-- <footer>
     <div class="container text-center">
