--- a/templates/base2.html
+++ b/templates/base2.html
@@ -34,7 +34,6 @@
 
             <div class="btn-contato">
 
-            
                <a href="{% url 'filomenas:perfil' %}"><button><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
               </svg> Olá, {{ request.user.username }}</button></a>
@@ -74,7 +73,7 @@
 {% block footer %}
 
 
-<footer>
+<!-- <footer>
 
     <div class="foot">
         <ul>      
@@ -122,7 +121,7 @@
     </div>
 
 
-</footer>
+</footer> -->
 
 <!-- <footer>
     <div class="container text-center">
