--- a/filomenas/templates/logado/pacote.html
+++ b/filomenas/templates/logado/pacote.html
@@ -25,7 +25,7 @@
                 <p class="card-text">Valor: {{ estadia.valor }}</p>
                 <p class="card-text">Programação: {{ estadia.programacao }}</p>
                 <a href="#" class="btn btn-secondary">Ver Mais</a>
-                <a href="{% url 'comprar' %}" class="btn btn-secondary">comprar</a>
+                <a href="#" class="btn btn-secondary">comprar</a>
 
               </div>
             </div>
