--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{% static 'css/a.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutFLQF4K3qEXvJz1P2GOJg5x9SPDKHQw8I/CI2vX38bfe" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyE12yzl3e4YlrJ6RS5tzgD81I6z5Y2a2H" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -27,7 +29,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'filomenas:home' %}">Home</a></li>
-                    <li><a href="{% url 'filomenas:listar' %}">Pacotes</a></li>
+                    <li><a href="{% url 'filomenas:listar2' %}">Pacotes</a></li>
                     <li><a href="{% url 'filomenas:filomenas' %}">Filomenas</a></li>
                 </ul>
             </nav>
